# Automation-Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
audit/archive/: peer_audit_20260227T004546Z.md  peer_audit_20260227T004839Z.md  self_audit_20260227T004449Z.md  self_audit_20260227T004719Z.md
audit/custom/: _verbose_smoke.md  random.md
audit/report_bypeer_received/: report_by_peer_received.md
audit/report_onpeer_generated/: habesha_audit.md  habesha_audit_from_run.md
audit/report_onself_generated/: self_audit.md  self_audit_run.md
rubric/: week2_rubric.json
scripts/: container-entrypoint.sh  docker_audit.sh
src/: __init__.py  config.py  graph.py  run.py  state.py
src/nodes/: aggregator.py  detectives.py  judges.py  justice.py  routing.py
src/tools/: ast_tools.py  git_tools.py  pdf_tools.py  repo_scan_tools.py  state_tools.py  vision_tools.py
tests/: conftest.py  test_config.py  test_cross_detective_consistency.py  test_integration_e2e.py  test_judges_citations.py  test_judges_structured_output_retry.py  test_justice_rules.py  test_offline_mode.py  test_reducers.py  test_routing.py  test_security_signal.py
