[project]
name = "automation-auditor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "pydantic>=2.6.0",
  "typing-extensions>=4.10.0",
  "python-dotenv>=1.0.1",
  "pypdf>=4.0.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]
